# cadux

./: .env.example  .gitignore  .instructions.md  AGENTS.md  README.md  TEST_LOG.md  list_cameras.ps1  main.py  plan.md  pyproject.toml
.github/workflows/: release.yml
.mex/: AGENTS.md  ROUTER.md  SETUP.md  config.json
.mex/context/: architecture.md  conventions.md  decisions.md  pairing.md  setup.md  stack.md
.mex/patterns/: INDEX.md  add-slash-command.md  build-android-apk.md  debug-sse-streaming.md  pairing-setup.md
docs/: build-and-deploy.md  hermes-sse-format.md  pairing-summary.md  pairing.md  plan-v0.4.md  plan.md  spec.md
paird/: README.md  install.ps1  install.sh  qr_display.py  server.py
paird/skills/cadux-pairing/: SKILL.md
paird/skills/cadux-pairing/scripts/: paird_manager.py
src/: chat_ui.py  config.py  main.py  pairing.py  profiles.py  qr_scanner.py  ws_client.py
temp/: qr_pairing.html
tools/: patch_lint.py
