[project]
name = "cadux"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet>=0.85.3",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.9.0",
    "qrcode>=8.2",
    "pyzbar>=0.1.9",
    "pillow>=12.2.0",
    "opencv-python-headless>=4.13.0.92",
]
